fixed contact section on mobile

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -12,7 +12,7 @@ html {
   @include theme();
   // min-height: 100vh;
   // height: 100%;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   // overflow-y: auto;
 }
 
