--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -127,3 +127,7 @@
     color: var(--primary-text-color-hover);
   }
 }
+
+@mixin b-radius {
+  border-radius: $borderRadius;
+}
